# sqlitegraph

./: .CLAUDE.md.kate-swp  .gitignore  .mcp.json  ADAPTIVE_PAGE_SIZING_FIXED.md  ADAPTIVE_PAGE_SUMMARY.md  AGENTS.md  API.md  BUG_PARALLEL_BFS_ISSUE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_VERIFICATION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_VERIFICATION.md  FEATURES_ENABLED_SUMMARY.md  FEATURE_ENABLEMENT_STATUS.md  FEATURE_VERIFICATION_REPORT.md  FINAL_DOCUMENTATION_UPDATES.md  GEMINI.md  MANUAL.md  PARALLEL_BFS_BENCHMARK_RESULTS.md  PARALLEL_BFS_CHUNKED.md  PARALLEL_BFS_FIXED.md  README.md  SECURITY.md  bench_parallel_bfs.sh  bfs_bench.txt  compilation_output.txt  insert_bench.txt  insert_bench_full.txt  k_hop_bench.txt  main  manual.md  memory  memory.wal  minimal_reproduction.rs  sqlitegraph_api_documentation.md  test_instrumentation.sh  test_native_backend.rs  (+1 more)
sqlitegraph/: CHANGELOG.md  Cargo.toml  README.md  core.d  libtest_syntax.rlib
sqlitegraph-cli/: Cargo.toml  README.md
sqlitegraph-cli/examples/: happens-before-events.json  pattern-center.json  rewrite-rules.json  verify_phase45.rs
sqlitegraph-cli/src/: cli.rs  client.rs  dsl.rs  lib.rs  main.rs  query.rs  reasoning.rs
sqlitegraph-core/: BLOCK_AWARE_CACHE_BEHAVIOR_REPORT.md  BLOCK_LOCALITY_PROTOTYPE_REPORT.md  BUG_10K_INVESTIGATION_SUMMARY.md  BUG_SNAPSHOTID_SQLITE_BACKEND.md  CACHE_CAPACITY_SWEEP_REPORT.md  CACHE_CLONE_FIX_REPORT.md  CHANGELOG.md  COLD_PATH_FORENSICS_REPORT.md  COLD_WARM_BENCHMARK_SPLIT_REPORT.md  Cargo.toml  EDGE_CORRUPTION_ROOT_CAUSE.md  MAIN_BENCHMARK_RERUN_REPORT.md  NODE_PAGE_OVERFLOW_FIX_REPORT.md  PAGE_ID_COLLISION_ROOT_CAUSE.md  PHASE3_NODE_PAGE_CACHE_FIX_REPORT.md  PHYSICAL_BLOCK_PLACEMENT_PROTOTYPE_REPORT.md  README.md  REBUILD_INDEXES_FIX_REPORT.md  REOPEN_CORRUPTION_FORENSICS.md  V3_10K_NODE_BUG_FIX.md  V3_FILE_IO_COORDINATION.md  V3_FORENSIC_REPORT.md  V3_REGRESSION_SWEEP_REPORT.md  clippy.toml  sqlitegraph_bench.json
sqlitegraph-core/benches/: adaptive_page_simple.rs  adjlist_benchmark.rs  backend_comparison.rs  bench_utils.rs  bfs.rs  cold_cache.rs  comparative_benchmark.rs  comprehensive_performance.rs  compression_benchmark.rs  concurrent_access.rs  connection_pool.rs  graph_generators.rs  graph_theory_benchmarks.rs  hnsw.rs  hnsw_multilayer.rs  insert.rs  io12_validation.rs  k_hop.rs  memory_profiling.rs  microbench_cluster_population.rs  microbench_fragmentation.rs  mvcc_benchmarks.rs  native_disk_io.rs  parallel_bfs.rs  prefetch_bench.rs  read_path_benchmarks.rs  real_datasets.rs  regression_memory.rs  regression_non_chain_patterns.rs  regression_pubsub_memory.rs  regression_pubsub_non_chain.rs  regression_pubsub_write_cost.rs  regression_write_cost.rs  sqlite_v3_comparison.rs  sqlite_v3_curated.rs  v2_dataset_generator.rs  v3_algorithm_benchmarks.rs  v3_backend_benchmarks.rs  wal_recovery_benchmarks.rs
sqlitegraph-core/docs/: HNSW_DEVELOPMENT_RULES.md  HNSW_VECTOR_INTEGRATION_FUTURE_ROADMAP.md  SEQUENTIAL_IO_PERFORMANCE.md  WAL_MODE_IMPLEMENTATION_GUIDE.md  phase10_performance_tuning.md  phase11_native_perf_plan.md  phase12_optimization_plan.md  phase29_step7_mmap_preaudit_notes.md  phase6_implementation_status.md  phase7_native_backend_refactor.md
sqlitegraph-core/examples/: algo_benchmark.rs  batch_bench.rs  batch_stress_test.rs  bench_parallel_bfs.rs  block_locality_benchmark.rs  cache_capacity_benchmark.rs  cache_clone_forensics.rs  cache_perf_test.rs  cold_path_decomposition.rs  compression_analysis.rs  compression_detailed.rs  compression_diagnostics.rs  crash_test_child.rs  debug_buffer_error.rs  get_node_cache_sweep.rs  hybrid_sqlite_v3_hnsw_pubsub.rs  native_v2_test.rs  phase53_1_execution.rs  phase55_simple_benchmark.rs  phase55_v2_performance_characterization.rs  reopen_corruption_repro.rs  test_100k.rs  test_adaptive_pages.rs  test_allocator_startup.rs  test_batch_simple.rs  test_binary_search.rs  test_btree_100k.rs  test_cache_warm.rs  test_chunked_bfs.rs  test_delta_encoding.rs  test_direct_backend_benchmark.rs  test_direct_edgestore.rs  test_edge_store_direct.rs  test_edgestore_perf.rs  test_index_restore.rs  test_index_staleness.rs  test_lazy_decode.rs  test_lock_overhead.rs  test_native_edge.rs  test_neighbors_cache.rs  (+17 more)
sqlitegraph-core/snapshot_export/: snapshot_1766284406.v2
sqlitegraph-core/src/: api_ergonomics.rs  backend.rs  bfs.rs  cache.rs  cypher.rs  errors.rs  fault_injection.rs  graph_opt.rs  introspection.rs  lib.rs  multi_hop.rs  mvcc.rs  pattern.rs  progress.rs  query_cache.rs  schema.rs  snapshot.rs
sqlitegraph-core/tests/: acid_regression_test.rs  adjacency_iterator_infinite_loop_test.rs  algo_tests.rs  bench_lifetime_tests.rs  benchmark_isolation_test.rs  bfs_tests.rs  bincode_compatibility_test.rs  bulk_insert_tests.rs  check_write_path.rs  cluster_offset_corruption_regression.rs  cold_path_forensics.rs  cypher_tests.rs  debug_file_size.rs  debug_index_rebuilding.rs  debug_index_rebuilding_trigger.rs  debug_overflow.rs  debug_scenario_c.rs  deterministic_index_tests.rs  edge_compression_tests.rs  edge_corruption_minimal.rs  edge_corruption_repro.rs  edge_insertion_corruption_test.rs  file_extension_debug.rs  get_node_forensics.rs  graph_node_existence_enforcement.rs  graphfile_io_invariant_regression_tests.rs  header_debug_trace_test.rs  header_decode_exact_80_bytes_panic.rs  header_decode_oob_regression_tests.rs  header_edge_case_tests.rs  header_region_lockdown_tests.rs  hnsw_persistence_tests.rs  index_persistence_integration.rs  index_persistence_validation.rs  instrumentation_tests.rs  isolate_open_bug.rs  kv_durability_tests.rs  lib_api_smoke_tests.rs  multi_node_corruption_regression.rs  mvcc_baseline_tests.rs  (+95 more)
sqlitegraph-py/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
sqlitegraph-py/examples/: 01_basic_crud.py  02_graph_algorithms.py  03_vector_search.py  04_social_network.py  05_file_backed.py  06_hybrid_sqlite_hnsw_query.py
sqlitegraph-py/src/: lib.rs
sqlitegraph-py/tests/: test_algo.py  test_basic.py  test_bulk_insert.py  test_crud.py  test_errors.py  test_hnsw.py  (+1 more)
(+1628 files in other folders)
