[package]
name = "sqlitegraph-cli"
version = "0.2.0"
edition = "2021"
description = "Command-line interface for SQLiteGraph graph database"
license = "GPL-3.0-or-later"
repository = "https://github.com/oldnordic/sqlitegraph"

keywords = ["graph", "database", "sqlite", "cli", "embedded"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "sqlitegraph"
path = "src/main.rs"

[dependencies]
sqlitegraph = { path = "../sqlitegraph", default-features = false, features = ["sqlite-backend"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[features]
default = ["sqlite-backend", "native-v2"]
sqlite-backend = ["sqlitegraph/sqlite-backend"]
native-v2 = ["sqlitegraph/native-v2"]
all-backends = ["sqlite-backend", "native-v2"]