[package]
name = "sqlitegraph-cli"
version = "1.5.5"
edition = "2021"
description = "Command-line interface for SQLiteGraph graph database"
license = "GPL-3.0-or-later"
repository = "https://github.com/oldnordic/sqlitegraph"
readme = "README.md"

keywords = ["graph", "database", "sqlite", "cli", "embedded"]
categories = ["command-line-utilities", "database"]
exclude = [
    "../docs/internal/**",
    "../.codemcp/**",
    "../.splice-backup/**",
]

[[bin]]
name = "sqlitegraph"
path = "src/main.rs"

[dependencies]
sqlitegraph = { path = "../sqlitegraph", version = "1.5.5", default-features = false, features = ["sqlite-backend", "native-v2"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[features]
default = ["sqlite-backend", "native-v2"]
sqlite-backend = ["sqlitegraph/sqlite-backend"]
native-v2 = ["sqlitegraph/native-v2"]
all-backends = ["sqlite-backend", "native-v2"]
