[package]
name = "sqlitegraph-cli"
version = "3.0.1"
edition = "2021"
description = "Command-line interface for SQLiteGraph — embedded graph and vector runtime with Cypher-inspired queries"
license = "GPL-3.0"
repository = "https://github.com/oldnordic/sqlitegraph"
readme = "README.md"

keywords = ["graph", "database", "sqlite", "cli", "cypher"]
categories = ["command-line-utilities", "database"]
exclude = [
    "../docs/internal/**",
    "../.codemcp/**",
    "../.splice-backup/**",
]

[[bin]]
name = "sqlitegraph"
path = "src/main.rs"

[dependencies]
sqlitegraph = { path = "../sqlitegraph-core", version = "3.0.1", default-features = false }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[features]
default = ["sqlite-backend"]
sqlite-backend = ["sqlitegraph/sqlite-backend"]
native-v3 = ["sqlitegraph/native-v3"]
all-backends = ["sqlite-backend", "native-v3"]
