[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "sqlitegraph"
version = "0.1.1"
description = "Embedded graph database with HNSW vector search — Python bindings to the sqlitegraph Rust crate."
license = { text = "GPL-3.0-only" }
authors = [{ name = "Luiz Spies" }]
readme = "README.md"
keywords = ["graph", "database", "sqlite", "embedded", "vector", "hnsw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=8"]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/oldnordic/sqlitegraph"
Repository = "https://github.com/oldnordic/sqlitegraph"
Documentation = "https://docs.rs/sqlitegraph"

[tool.maturin]
python-source = "python"
module-name = "sqlitegraph._native"
features = ["pyo3/extension-module"]
include = ["python/sqlitegraph/_native.pyi", "python/sqlitegraph/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "target", "dist", "build"]

[tool.ruff.lint]
# F  — pyflakes (unused imports, undefined names, etc.)
# E,W — pycodestyle errors and warnings
# I  — isort (import ordering)
# B  — flake8-bugbear (likely bugs)
# UP — pyupgrade (modern Python idioms for our target version)
# SIM — flake8-simplify
# RUF — ruff-specific rules
select = ["F", "E", "W", "I", "B", "UP", "SIM", "RUF"]
# E501 (line too long) is handled by the formatter
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests may use bare asserts and longer fixtures
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.10"
files = ["python/sqlitegraph"]
strict = true
# The compiled extension is imported as `sqlitegraph._native`; the .pyi
# stubs alongside it carry the types, so we never need to silence imports.
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
