[package]
name = "sqlitegraph"
version = "0.2.4"
edition = "2024"
description = "Deterministic, embedded graph database with SQLite and Native V2 backends"
license = "GPL-3.0-or-later"
repository = "https://github.com/oldnordic/sqlitegraph"
documentation = "https://docs.rs/sqlitegraph"
readme = "README.md"
keywords = ["graph", "database", "sqlite", "embedded"]
categories = ["database", "data-structures"]

[lib]
name = "sqlitegraph"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
ahash = "0.8"
parking_lot = "0.12"
rand = "0.8"
arc-swap = "1"
bytemuck = { version = "1.13", features = ["derive"] }
binrw = "0.13"
memmap2 = "0.9"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
tempfile = "3"
rand = "0.8"


[features]
default = ["sqlite-backend"]

# Backend selection
sqlite-backend = []          # SQLite backend (mature, ACID transactions)
native-v2 = ["v2_io_exclusive_std"]  # Native V2 backend (high performance, production ready)

# Development/debug features
trace_v2_io = []             # Debug V2 I/O operations (development only)
bench-ci = []                # CI benchmarking

# Legacy compatibility
v2_experimental = ["native-v2"]  # Alias for backwards compatibility
v2_io_exclusive_mmap = []    # MMAP-based I/O (advanced users)
v2_io_exclusive_std = []     # std::fs-based I/O (stable)

# Phase 13 Step 5: Safe and portable optimization profiles
[profile.release]
# Optimize for performance with portable settings
opt-level = 3
codegen-units = 1
lto = "thin"
debug = false
panic = "abort"

[profile.bench]
# Benchmark profiling with debug symbols for flamegraph analysis
inherits = "release"
opt-level = 3
codegen-units = 1
lto = "thin"
debug = true  # Enable debug symbols for flamegraph profiling

[profile.test]
# Test profile optimized for speed while maintaining debuggability
opt-level = 2
codegen-units = 16
debug = true

# Phase 8 Backend Comparison Benchmarks
[[bench]]
name = "bfs"
harness = false

[[bench]]
name = "k_hop"
harness = false

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "hnsw"
harness = false
